--- a/src/Core/Harry.Common/project.json
+++ b/src/Core/Harry.Common/project.json
@@ -22,7 +22,7 @@
         "System.Dynamic.Runtime": "4.0.10",
         "System.IO": "4.0.10",
         "System.IO.FileSystem": "4.0.0",
-        "System.IO.FileSystem.Primitives": "4.0.0"
+        "System.IO.FileSystem.Primitives": "4.0.0",
       }
     }
   }
