--- a/src/Harry.Common/project.lock.json
+++ b/src/Harry.Common/project.lock.json
@@ -219,7 +219,7 @@
           "System.Runtime": "4.1.0"
         },
         "compile": {
-          "ref/netstandard1.3/_._": {}
+          "ref/netstandard1.3/System.Diagnostics.Debug.dll": {}
         }
       },
       "System.Diagnostics.DiagnosticSource/4.0.0": {
@@ -4118,17 +4118,14 @@
     ".NETFramework,Version=v2.0": [],
     ".NETFramework,Version=v3.5": [],
     ".NETFramework,Version=v4.0": [
-      "System.Data >= 4.0.0",
       "System.Xml >= 4.0.0",
       "System.Xml.Linq >= 4.0.0"
     ],
     ".NETFramework,Version=v4.5": [
-      "System.Data >= 4.0.0",
       "System.Xml >= 4.0.0",
       "System.Xml.Linq >= 4.0.0"
     ],
     ".NETFramework,Version=v4.5.1": [
-      "System.Data >= 4.0.0",
       "System.Xml >= 4.0.0",
       "System.Xml.Linq >= 4.0.0"
     ],
@@ -4137,6 +4134,7 @@
       "System.Collections.Concurrent >= 4.0.12",
       "System.Collections.NonGeneric >= 4.0.1",
       "System.Data.SqlClient >= 4.1.0",
+      "System.Diagnostics.Debug >= 4.0.11",
       "System.Dynamic.Runtime >= 4.0.11",
       "System.Linq >= 4.1.0",
       "System.Reflection >= 4.1.0",
