--- a/src/Harry.Toolkit/project.lock.json
+++ b/src/Harry.Toolkit/project.lock.json
@@ -2200,6 +2200,7 @@
           "System.Collections.Concurrent": "4.0.12",
           "System.Collections.NonGeneric": "4.0.1",
           "System.Data.SqlClient": "4.1.0",
+          "System.Diagnostics.Debug": "4.0.11",
           "System.Dynamic.Runtime": "4.0.11",
           "System.Linq": "4.1.0",
           "System.Reflection": "4.1.0",
