--- a/src/Harry.Web/project.json
+++ b/src/Harry.Web/project.json
@@ -18,10 +18,7 @@
     },
     "net40": {
       "frameworkAssemblies": {
-        "System.Data": "4.0.0.0",
-        "System.Web": "4.0.0.0",
-        "System.Xml": "4.0.0.0",
-        "System.Xml.Linq": "4.0.0.0"
+        "System.Web": "4.0.0.0"
       }
     },
     "net45": {
@@ -29,10 +26,7 @@
         "define": [ "ASYNC" ]
       },
       "frameworkAssemblies": {
-        "System.Data": "4.0.0.0",
-        "System.Web": "4.0.0.0",
-        "System.Xml": "4.0.0.0",
-        "System.Xml.Linq": "4.0.0.0"
+        "System.Web": "4.0.0.0"
       }
     },
     "net451": {
@@ -40,10 +34,7 @@
         "define": [ "ASYNC" ]
       },
       "frameworkAssemblies": {
-        "System.Data": "4.0.0.0",
-        "System.Web": "4.0.0.0",
-        "System.Xml": "4.0.0.0",
-        "System.Xml.Linq": "4.0.0.0"
+        "System.Web": "4.0.0.0"
       }
     }
   }
