--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -1,8 +1,11 @@
-﻿{
-  "version": "1.0.0-*",
-
+{
+  "title": "Harry.Common",
+  "version": "0.1.0-*",
+  "buildOptions": {
+     
+  },
   "dependencies": {
-
+    
   },
 
   "frameworks": {
@@ -18,8 +21,7 @@
     },
     "net40": {
       "frameworkAssemblies": {
-        "System.Xml": "4.0.0.0",
-        "System.Xml.Linq": "4.0.0.0"
+
       }
     },
     "net45": {
@@ -27,8 +29,7 @@
         "define": [ "ASYNC" ]
       },
       "frameworkAssemblies": {
-        "System.Xml": "4.0.0.0",
-        "System.Xml.Linq": "4.0.0.0"
+
       },
       "dependencies": {
 
@@ -39,8 +40,7 @@
         "define": [ "ASYNC" ]
       },
       "frameworkAssemblies": {
-        "System.Xml": "4.0.0.0",
-        "System.Xml.Linq": "4.0.0.0"
+
       },
       "dependencies": {
 
