--- a/src/Harry.Common/project.lock.json
+++ b/src/Harry.Common/project.lock.json
@@ -4117,18 +4117,9 @@
     "": [],
     ".NETFramework,Version=v2.0": [],
     ".NETFramework,Version=v3.5": [],
-    ".NETFramework,Version=v4.0": [
-      "System.Xml >= 4.0.0",
-      "System.Xml.Linq >= 4.0.0"
-    ],
-    ".NETFramework,Version=v4.5": [
-      "System.Xml >= 4.0.0",
-      "System.Xml.Linq >= 4.0.0"
-    ],
-    ".NETFramework,Version=v4.5.1": [
-      "System.Xml >= 4.0.0",
-      "System.Xml.Linq >= 4.0.0"
-    ],
+    ".NETFramework,Version=v4.0": [],
+    ".NETFramework,Version=v4.5": [],
+    ".NETFramework,Version=v4.5.1": [],
     ".NETStandard,Version=v1.3": [
       "System.Collections >= 4.0.11",
       "System.Collections.Concurrent >= 4.0.12",
