--- a/src/Harry.Data/project.json
+++ b/src/Harry.Data/project.json
@@ -1,19 +1,21 @@
-{
+﻿{
+  "title": "Harry.Data",
   "version": "0.1.0-*",
+  "buildOptions": {
 
+  },
   "dependencies": {
     "Harry.Common": "0.1-*"
   },
-
   "frameworks": {
     "net20": {
       "frameworkAssemblies": {
-        "System.Web": "2.0.0.0"
+
       }
     },
     "net40": {
       "frameworkAssemblies": {
-        "System.Web": "4.0.0.0"
+
       }
     },
     "net45": {
@@ -21,7 +23,10 @@
         "define": [ "ASYNC" ]
       },
       "frameworkAssemblies": {
-        "System.Web": "4.0.0.0"
+
+      },
+      "dependencies": {
+
       }
     },
     "net451": {
@@ -29,7 +34,18 @@
         "define": [ "ASYNC" ]
       },
       "frameworkAssemblies": {
-        "System.Web": "4.0.0.0"
+
+      },
+      "dependencies": {
+
+      }
+    },
+    "netstandard1.3": {
+      "buildOptions": {
+        "define": [ "ASYNC", "COREFX" ]
+      },
+      "dependencies": {
+
       }
     }
   }
