--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -7,14 +7,8 @@
   "dependencies": {
     
   },
-
   "frameworks": {
     "net20": {
-      "frameworkAssemblies": {
-
-      }
-    },
-    "net35": {
       "frameworkAssemblies": {
 
       }
@@ -54,7 +48,6 @@
         "System.Collections": "4.0.11",
         "System.Collections.Concurrent": "4.0.12",
         "System.Collections.NonGeneric": "4.0.1",
-        "System.Data.SqlClient": "4.1.0",
         "System.Dynamic.Runtime": "4.0.11",
         "System.Linq": "4.1.0",
         "System.Reflection": "4.1.0",
@@ -70,8 +63,7 @@
         "System.Threading.Thread": "4.0.0",
         "System.Xml.XDocument": "4.0.11",
         "System.Xml.XmlDocument": "4.0.1",
-        "System.Security.Cryptography.Algorithms": "4.2.0",
-        "System.Diagnostics.Debug": "4.0.11"
+        "System.Security.Cryptography.Algorithms": "4.2.0"
       }
     }
   }
