--- a/src/Harry.Data/project.lock.json
+++ b/src/Harry.Data/project.lock.json
@@ -2,10 +2,54 @@
   "locked": false,
   "version": 2,
   "targets": {
-    ".NETFramework,Version=v2.0": {},
-    ".NETFramework,Version=v4.0": {},
-    ".NETFramework,Version=v4.5": {},
-    ".NETFramework,Version=v4.5.1": {},
+    ".NETFramework,Version=v2.0": {
+      "Harry.Common/0.1.0": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v2.0",
+        "compile": {
+          "net20/Harry.Common.dll": {}
+        },
+        "runtime": {
+          "net20/Harry.Common.dll": {}
+        }
+      }
+    },
+    ".NETFramework,Version=v4.0": {
+      "Harry.Common/0.1.0": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.0",
+        "compile": {
+          "net40/Harry.Common.dll": {}
+        },
+        "runtime": {
+          "net40/Harry.Common.dll": {}
+        }
+      }
+    },
+    ".NETFramework,Version=v4.5": {
+      "Harry.Common/0.1.0": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.5",
+        "compile": {
+          "net45/Harry.Common.dll": {}
+        },
+        "runtime": {
+          "net45/Harry.Common.dll": {}
+        }
+      }
+    },
+    ".NETFramework,Version=v4.5.1": {
+      "Harry.Common/0.1.0": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.5.1",
+        "compile": {
+          "net451/Harry.Common.dll": {}
+        },
+        "runtime": {
+          "net451/Harry.Common.dll": {}
+        }
+      }
+    },
     ".NETStandard,Version=v1.3": {
       "Microsoft.NETCore.Platforms/1.0.1": {
         "type": "package",
@@ -550,6 +594,37 @@
         },
         "runtime": {
           "lib/netstandard1.3/System.Xml.XmlDocument.dll": {}
+        }
+      },
+      "Harry.Common/0.1.0": {
+        "type": "project",
+        "framework": ".NETStandard,Version=v1.3",
+        "dependencies": {
+          "System.Collections": "4.0.11",
+          "System.Collections.Concurrent": "4.0.12",
+          "System.Collections.NonGeneric": "4.0.1",
+          "System.Dynamic.Runtime": "4.0.11",
+          "System.Linq": "4.1.0",
+          "System.Reflection": "4.1.0",
+          "System.Reflection.Emit": "4.0.1",
+          "System.Reflection.Emit.Lightweight": "4.0.1",
+          "System.Reflection.Extensions": "4.0.1",
+          "System.Reflection.TypeExtensions": "4.1.0",
+          "System.Runtime": "4.1.0",
+          "System.Runtime.Extensions": "4.1.0",
+          "System.Runtime.InteropServices": "4.1.0",
+          "System.Security.Cryptography.Algorithms": "4.2.0",
+          "System.Text.RegularExpressions": "4.1.0",
+          "System.Threading": "4.0.11",
+          "System.Threading.Thread": "4.0.0",
+          "System.Xml.XDocument": "4.0.11",
+          "System.Xml.XmlDocument": "4.0.1"
+        },
+        "compile": {
+          "netstandard1.3/Harry.Common.dll": {}
+        },
+        "runtime": {
+          "netstandard1.3/Harry.Common.dll": {}
         }
       }
     }
@@ -2785,35 +2860,22 @@
         "ref/xamarintvos10/_._",
         "ref/xamarinwatchos10/_._"
       ]
+    },
+    "Harry.Common/0.1.0": {
+      "type": "project",
+      "path": "../Harry.Common/project.json",
+      "msbuildProject": "../Harry.Common/Harry.Common.xproj"
     }
   },
   "projectFileDependencyGroups": {
-    "": [],
+    "": [
+      "Harry.Common >= 0.1.0-*"
+    ],
     ".NETFramework,Version=v2.0": [],
     ".NETFramework,Version=v4.0": [],
     ".NETFramework,Version=v4.5": [],
     ".NETFramework,Version=v4.5.1": [],
-    ".NETStandard,Version=v1.3": [
-      "System.Collections >= 4.0.11",
-      "System.Collections.Concurrent >= 4.0.12",
-      "System.Collections.NonGeneric >= 4.0.1",
-      "System.Dynamic.Runtime >= 4.0.11",
-      "System.Linq >= 4.1.0",
-      "System.Reflection >= 4.1.0",
-      "System.Reflection.Emit >= 4.0.1",
-      "System.Reflection.Emit.Lightweight >= 4.0.1",
-      "System.Reflection.Extensions >= 4.0.1",
-      "System.Reflection.TypeExtensions >= 4.1.0",
-      "System.Runtime >= 4.1.0",
-      "System.Runtime.Extensions >= 4.1.0",
-      "System.Runtime.InteropServices >= 4.1.0",
-      "System.Security.Cryptography.Algorithms >= 4.2.0",
-      "System.Text.RegularExpressions >= 4.1.0",
-      "System.Threading >= 4.0.11",
-      "System.Threading.Thread >= 4.0.0",
-      "System.Xml.XDocument >= 4.0.11",
-      "System.Xml.XmlDocument >= 4.0.1"
-    ]
+    ".NETStandard,Version=v1.3": []
   },
   "tools": {},
   "projectFileToolGroups": {}
