--- a/src/Harry.Logging.NLog/project.lock.json
+++ b/src/Harry.Logging.NLog/project.lock.json
@@ -12,7 +12,7 @@
           "lib/net40/NLog.dll": {}
         }
       },
-      "Harry.Common/0.1.0": {
+      "Harry.Common/0.1.0-alpha1": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.0",
         "compile": {
@@ -20,6 +20,19 @@
         },
         "runtime": {
           "net40/Harry.Common.dll": {}
+        }
+      },
+      "Harry.Logging/0.1.0": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.0",
+        "dependencies": {
+          "Harry.Common": "0.1.0-alpha1"
+        },
+        "compile": {
+          "net40/Harry.Logging.dll": {}
+        },
+        "runtime": {
+          "net40/Harry.Logging.dll": {}
         }
       }
     },
@@ -33,7 +46,7 @@
           "lib/net45/NLog.dll": {}
         }
       },
-      "Harry.Common/0.1.0": {
+      "Harry.Common/0.1.0-alpha1": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5",
         "compile": {
@@ -41,6 +54,19 @@
         },
         "runtime": {
           "net45/Harry.Common.dll": {}
+        }
+      },
+      "Harry.Logging/0.1.0": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.5",
+        "dependencies": {
+          "Harry.Common": "0.1.0-alpha1"
+        },
+        "compile": {
+          "net45/Harry.Logging.dll": {}
+        },
+        "runtime": {
+          "net45/Harry.Logging.dll": {}
         }
       }
     },
@@ -1382,7 +1408,7 @@
           "lib/netstandard1.3/System.Xml.XmlDocument.dll": {}
         }
       },
-      "Harry.Common/0.1.0": {
+      "Harry.Common/0.1.0-alpha1": {
         "type": "project",
         "framework": ".NETStandard,Version=v1.3",
         "dependencies": {
@@ -1407,6 +1433,34 @@
         },
         "runtime": {
           "netstandard1.3/Harry.Common.dll": {}
+        }
+      },
+      "Harry.Logging/0.1.0": {
+        "type": "project",
+        "framework": ".NETStandard,Version=v1.3",
+        "dependencies": {
+          "Harry.Common": "0.1.0-alpha1",
+          "System.Collections": "4.0.11",
+          "System.Collections.Concurrent": "4.0.12",
+          "System.Collections.NonGeneric": "4.0.1",
+          "System.Dynamic.Runtime": "4.0.11",
+          "System.Linq": "4.1.0",
+          "System.Reflection": "4.1.0",
+          "System.Reflection.Extensions": "4.0.1",
+          "System.Reflection.TypeExtensions": "4.1.0",
+          "System.Runtime": "4.1.0",
+          "System.Runtime.Extensions": "4.1.0",
+          "System.Runtime.InteropServices": "4.1.0",
+          "System.Security.Cryptography.Algorithms": "4.2.0",
+          "System.Text.RegularExpressions": "4.1.0",
+          "System.Threading": "4.0.11",
+          "System.Threading.Thread": "4.0.0"
+        },
+        "compile": {
+          "netstandard1.3/Harry.Logging.dll": {}
+        },
+        "runtime": {
+          "netstandard1.3/Harry.Logging.dll": {}
         }
       }
     }
@@ -5267,15 +5321,20 @@
         "ref/xamarinwatchos10/_._"
       ]
     },
-    "Harry.Common/0.1.0": {
+    "Harry.Common/0.1.0-alpha1": {
       "type": "project",
       "path": "../Harry.Common/project.json",
       "msbuildProject": "../Harry.Common/Harry.Common.xproj"
+    },
+    "Harry.Logging/0.1.0": {
+      "type": "project",
+      "path": "../Harry.Logging/project.json",
+      "msbuildProject": "../Harry.Logging/Harry.Logging.xproj"
     }
   },
   "projectFileDependencyGroups": {
     "": [
-      "Harry.Common >= 0.1.0-*"
+      "Harry.Logging >= 0.1.0-*"
     ],
     ".NETFramework,Version=v4.0": [
       "NLog >= 4.3.6"
