--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -12,7 +12,7 @@
   },
 
   "title": "Harry.Common",
-  "version": "0.1.0-alpha2",
+  "version": "0.1.0",
   "authors": [ "Harry" ],
   "description": "",
 
