--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -1,10 +1,10 @@
 {
   "packOptions": {
     "summary": "Harry.Common",
-    "tags": [],
+    "tags": [ "toolkit" ],
     "owners": [ "Harry" ],
     "projectUrl": "https://github.com/harry-wangx/Harry.Toolkit",
-    "licenseUrl": "",
+    "licenseUrl": "http://www.apache.org/licenses/LICENSE-2.0",
     "repository": {
       "type": "git",
       "url": "https://github.com/harry-wangx/Harry.Toolkit"
@@ -12,9 +12,9 @@
   },
 
   "title": "Harry.Common",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "authors": [ "Harry" ],
-  "description": "",
+  "description": "Harry.Common",
 
   "buildOptions": {
 
