--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -59,6 +59,7 @@
         "System.Collections.Concurrent": "4.0.12",
         "System.Collections.NonGeneric": "4.0.1",
         "System.Dynamic.Runtime": "4.0.11",
+        "System.Diagnostics.Process": "4.1.0",
         "System.Linq": "4.1.0",
         "System.Reflection": "4.1.0",
         "System.Reflection.Extensions": "4.0.1",
@@ -72,5 +73,5 @@
         "System.Security.Cryptography.Algorithms": "4.2.0"
       }
     }
-  }
+  } 
 }
