--- a/src/Harry.Data.Dapper/project.json
+++ b/src/Harry.Data.Dapper/project.json
@@ -5,7 +5,7 @@
 
   },
   "dependencies": {
-    "Harry.Common": "0.1-*",
+    "Harry.Common": "0.1.*",
     "Dapper": "1.50.2"
   },
   "frameworks": {
