--- a/src/Harry.Toolkit/project.json
+++ b/src/Harry.Toolkit/project.json
@@ -5,7 +5,7 @@
   },
 
   "dependencies": {
-    "Harry.Common": "0.1-*",
+    "Harry.Common": "0.1.*",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0"
