--- a/src/Harry.Metrics.MetricsDotNet/project.lock.json
+++ b/src/Harry.Metrics.MetricsDotNet/project.lock.json
@@ -12,7 +12,7 @@
           "lib/net45/Metrics.dll": {}
         }
       },
-      "Harry.Common/0.1.2": {
+      "Harry.Common/0.1.3": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5",
         "compile": {
@@ -37,7 +37,7 @@
         "lib/net45/Metrics.pdb"
       ]
     },
-    "Harry.Common/0.1.2": {
+    "Harry.Common/0.1.3": {
       "type": "project",
       "path": "../Harry.Common/project.json",
       "msbuildProject": "../Harry.Common/Harry.Common.xproj"
@@ -45,7 +45,7 @@
   },
   "projectFileDependencyGroups": {
     "": [
-      "Harry.Common >= 0.1.2"
+      "Harry.Common >= 0.1.*"
     ],
     ".NETFramework,Version=v4.5": [
       "Metrics.NET >= 0.3.7"
