--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -12,7 +12,7 @@
   },
 
   "title": "Harry.Common",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "authors": [ "Harry" ],
   "description": "Harry.Common",
 
@@ -20,7 +20,7 @@
 
   },
   "dependencies": {
-    "Harry.Logging.Abstractions": "0.1.0"
+    "Newtonsoft.Json": "9.0.1"
   },
   "frameworks": {
     "net20": {
@@ -55,22 +55,22 @@
         "define": [ "ASYNC", "COREFX" ]
       },
       "dependencies": {
-        "System.Collections": "4.0.11",
-        "System.Collections.Concurrent": "4.0.12",
-        "System.Collections.NonGeneric": "4.0.1",
-        "System.Dynamic.Runtime": "4.0.11",
-        "System.Diagnostics.Process": "4.1.0",
-        "System.Linq": "4.1.0",
-        "System.Reflection": "4.1.0",
-        "System.Reflection.Extensions": "4.0.1",
-        "System.Reflection.TypeExtensions": "4.1.0",
-        "System.Runtime": "4.1.0",
-        "System.Runtime.Extensions": "4.1.0",
-        "System.Runtime.InteropServices": "4.1.0",
-        "System.Text.RegularExpressions": "4.1.0",
-        "System.Threading": "4.0.11",
-        "System.Threading.Thread": "4.0.0",
-        "System.Security.Cryptography.Algorithms": "4.2.0"
+        "System.Collections": "4.3.0",
+        "System.Collections.Concurrent": "4.3.0",
+        "System.Collections.NonGeneric": "4.3.0",
+        "System.Dynamic.Runtime": "4.3.0",
+        "System.Diagnostics.Process": "4.3.0",
+        "System.Linq": "4.3.0",
+        "System.Reflection": "4.3.0",
+        "System.Reflection.Extensions": "4.3.0",
+        "System.Reflection.TypeExtensions": "4.3.0",
+        "System.Runtime": "4.3.0",
+        "System.Runtime.Extensions": "4.3.0",
+        "System.Runtime.InteropServices": "4.3.0",
+        "System.Text.RegularExpressions": "4.3.0",
+        "System.Threading": "4.3.0",
+        "System.Threading.Thread": "4.3.0",
+        "System.Security.Cryptography.Algorithms": "4.3.0"
       }
     }
   } 
