--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -12,7 +12,7 @@
   },
 
   "title": "Harry.Common",
-  "version": "0.2.3",
+  "version": "0.2.4-alpha2",
   "authors": [ "Harry" ],
   "description": "Harry.Common",
 
