添加密码加解密类

--- a/src/Harry.Toolkit/project.json
+++ b/src/Harry.Toolkit/project.json
@@ -49,7 +49,8 @@
       "dependencies": {
         "Microsoft.AspNetCore.Http.Abstractions": "1.0.0",
         "System.Threading.Tasks": "4.3.0",
-        "System.Runtime.InteropServices": "4.3.0"
+        "System.Runtime.InteropServices": "4.3.0",
+        "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.1.0"
       }
     }
   }
