--- a/src/Harry.Toolkit/project.lock.json
+++ b/src/Harry.Toolkit/project.lock.json
@@ -1379,6 +1379,7 @@
           "System.Diagnostics.Process": "4.3.0",
           "System.Dynamic.Runtime": "4.3.0",
           "System.IO": "4.3.0",
+          "System.IO.Compression": "4.3.0",
           "System.Linq": "4.3.0",
           "System.Reflection": "4.3.0",
           "System.Reflection.Extensions": "4.3.0",
