--- a/test/Harry.Test.NET45/Harry.Test.NET45.csproj
+++ b/test/Harry.Test.NET45/Harry.Test.NET45.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{EB121D63-E7D2-45ED-A9A6-0950582F7A51}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Harry.Test.NET45</RootNamespace>
+    <RootNamespace>Harry.Test</RootNamespace>
     <AssemblyName>Harry.Test.NET45</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -17,7 +17,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -25,13 +25,13 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NUNIT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Harry.Common">
-      <HintPath>..\..\src\Harry.Common\bin\Release\net45\Harry.Common.dll</HintPath>
+    <Reference Include="Harry.Toolkit">
+      <HintPath>..\..\src\Harry.Toolkit\bin\Release\net45\Harry.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -59,7 +59,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Harry.Test.NETCore\Configuration\MyConfiguration.cs">
+      <Link>Configuration\MyConfiguration.cs</Link>
+    </Compile>
     <Compile Include="Common\UtilsTest.cs" />
+    <Compile Include="Configuration\ConfigurationEntryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
