--- a/src/Harry.Toolkit/project.json
+++ b/src/Harry.Toolkit/project.json
@@ -1,6 +1,6 @@
 {
   "title": "Harry.Toolkit",
-  "version": "0.1.0-alpha1",
+  "version": "1.0.0-alpha1",
   "authors": [ "Harry" ],
   "description": "Harry.Toolkit",
 
@@ -21,6 +21,7 @@
   },
 
   "dependencies": {
+    "Harry.Common": "1.0.0-*",
     "Harry.Logging": "0.3.4",
     "Newtonsoft.Json": "9.0.1"
   },
