--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -46,7 +46,7 @@
 
       },
       "dependencies": {
-        
+
       }
     },
 
@@ -72,7 +72,8 @@
         "System.Threading": "4.3.0",
         "System.Threading.Thread": "4.3.0",
         "System.Security.Cryptography.Algorithms": "4.3.0",
-        "System.IO.Compression": "4.3.0"
+        "System.IO.Compression": "4.3.0",
+        "System.Diagnostics.Debug": "4.3.0"
       }
     }
   } 
