--- a/src/Harry.Common/project.json
+++ b/src/Harry.Common/project.json
@@ -12,7 +12,7 @@
   },
 
   "title": "Harry.Common",
-  "version": "1.0.0-alpha1",
+  "version": "1.0.0-*",
   "authors": [ "Harry" ],
   "description": "Harry.Common",
 
