--- a/test/Harry.Test.NET45/Harry.Test.NET45.csproj
+++ b/test/Harry.Test.NET45/Harry.Test.NET45.csproj
@@ -59,11 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Harry.Test.NETCore\Configuration\MyConfiguration.cs">
-      <Link>Configuration\MyConfiguration.cs</Link>
-    </Compile>
     <Compile Include="Common\UtilsTest.cs" />
-    <Compile Include="Configuration\ConfigurationEntryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +67,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
