--- a/Harry.Common/Harry.Common.csproj
+++ b/Harry.Common/Harry.Common.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net35;net40</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net35;net40;net45</TargetFrameworks>
     <RootNamespace>Harry</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Harry</Authors>
