--- a/Harry.Toolkit/Harry.Toolkit.csproj
+++ b/Harry.Toolkit/Harry.Toolkit.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net35</TargetFrameworks>
     <RootNamespace>Harry</RootNamespace>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
