--- a/Harry.Common/Harry.Common.csproj
+++ b/Harry.Common/Harry.Common.csproj
@@ -10,11 +10,15 @@
     <PackageTags></PackageTags>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
-    <Version>1.0.0-alpha6</Version>
+    <Version>1.0.0-alpha9002</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
     <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Common\SequentialGuidGenerator.cs" />
+  </ItemGroup>
 
 </Project>
