--- a/Harry.Common/Harry.Common.csproj
+++ b/Harry.Common/Harry.Common.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>Harry</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Common\IdCreator.cs" />
+  </ItemGroup>
+
   <!--<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'netcoreapp3.0'">
     <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
   </PropertyGroup>-->
