--- a/Harry.Toolkit/Harry.Toolkit.csproj
+++ b/Harry.Toolkit/Harry.Toolkit.csproj
@@ -1,17 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;netstandard2.1;net6.0;</TargetFrameworks>
+		<TargetFrameworks>net6.0;netstandard2.1;</TargetFrameworks>
 		<RootNamespace>Harry</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
-	</ItemGroup>
-
-	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.1'">
-		<Compile Remove="Device\*.cs" />
 	</ItemGroup>
 
 	<!--<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'netcoreapp3.0'">
