--- a/Harry.Toolkit/Harry.Toolkit.csproj
+++ b/Harry.Toolkit/Harry.Toolkit.csproj
@@ -3,7 +3,30 @@
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;netstandard2.1;</TargetFrameworks>
 		<RootNamespace>Harry</RootNamespace>
+		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Common\**" />
+	  <Compile Remove="Compression\**" />
+	  <Compile Remove="Tree\**" />
+	  <EmbeddedResource Remove="Common\**" />
+	  <EmbeddedResource Remove="Compression\**" />
+	  <EmbeddedResource Remove="Tree\**" />
+	  <None Remove="Common\**" />
+	  <None Remove="Compression\**" />
+	  <None Remove="Tree\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="BitArray.cs" />
+	  <Compile Remove="Extensions\ArrayExtensions.cs" />
+	  <Compile Remove="Extensions\DateTimeExtensions.cs" />
+	  <Compile Remove="Extensions\DictionaryExtensions.cs" />
+	  <Compile Remove="Extensions\LockExtensions.cs" />
+	  <Compile Remove="Extensions\ObjectExtensions.cs" />
+	  <Compile Remove="Extensions\StringExtensions.cs" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
